# equivariant-ntk

./: .gitignore  README.md  pyproject.toml
equivariant_ntk/layers/: __init__.py  p4convp4.py  pool.py  s2convso3.py  so3_pool.py  so3convso3.py  z2convp4.py
equivariant_ntk/utils/: so3.py  vmap_helpers.py
examples/histological_image_classification/: dataset.py  kernel_convergence.ipynb  kernel_prediction.ipynb
examples/molecules/: dataset.py  kernel_prediction.ipynb  utils.py
tests/: .pdbrc  common_args.py  conftest.py  s2_so3_utils.py  test_complete_s2_network.py  test_p4convp4.py  test_s2convso3.py  test_so3_pool.py  test_so3convso3.py  test_utils.py  test_vmap_helpers.py  test_z2convp4.py  utils.py
